latest news social center sligned on mobile - fixes #14

--- a/src/stylesheets/components/_latest-news.sass
+++ b/src/stylesheets/components/_latest-news.sass
@@ -33,6 +33,9 @@
   &__social
     +socialButtons
 
+    @media (max-width: $maxTablet)
+      text-align: center
+      
     @media (max-width: $maxSmallDesktop)
       +spacingBottomHalf
       flex: 0 0 100%
